@@ -1,7 +1,8 @@
 *** Changelog ***
 
 = 6.2.0 - 2022-xx-xx =
-
+* Add - Add onboarding payment gateway setup methods.
+* Fix - Enable Stripe payment method after connecting account.
 
 = 6.1.0 - 2022-01-26 =
 * Tweak - Use the newly exposed LoadableMask component provided by WooCommerce Blocks to trigger the loading state for Payment Request Buttons.
